objects/ssot__TerritoryModel__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActivatedDateTime__c</fullName>
        <label>Activated Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeactivatedDateTime__c</fullName>
        <label>Deactivated Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Territory Model Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastOppTerrAsgntEndDateTime__c</fullName>
        <label>Last Opp Territory Asgnt End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastRunRulesEndDateTime__c</fullName>
        <label>Last Run Rules End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__TerritoryModelDescription__c</fullName>
        <label>Territory Model Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TerritoryModelName__c</fullName>
        <label>Territory Model Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TerritoryModelState__c</fullName>
        <label>Territory Model State</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>